Server: Created All GET '/users/n' Endpoints
