# openapi.yaml
@@ -597,7 +597,7 @@ paths:
     get:
       summary: "Get all users"
       tags:
-        - "Users"
+        - "Completed - Users"
       responses:
         "200":
           description: "A list of users"
@@ -638,18 +638,18 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /users/{userId}:
+  /users/{userUUID}:
     parameters:
-      - name: userId
+      - name: userUUID
         in: path
         required: true
-        description: "The ID of the user"
+        description: "The UUID of the user"
         schema:
           type: "string"
     get:
-      summary: "Get a user by ID"
+      summary: "Get a user by UUID"
       tags:
-        - "Users"
+        - "Completed - Users"
       responses:
         "200":
           description: "The user"
@@ -708,7 +708,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /users/{userID}/sets:
+  /users/{userUUID}/sets:
     get:
       summary: "Get all flashcard sets created by a user"
       tags:
@@ -1045,10 +1045,7 @@ components:
         username:
           type: "string"
           example: "johndoe"
-        password:
-          type: "string"
-          example: "password1"
-        admin:
+        adminFlag:
           type: "boolean"
           example: false
           default: false
@@ -1057,10 +1054,14 @@ components:
           type: "string"
           format: "date-time"
           example: "2024-10-14T12:00:00Z"
-        hiddenFlashcardUUID:
-          type: "array"
-          items:
-            type: "string"
+        delete:
+          type: "boolean"
+          default: false
+          example: false
+        apiAccount:
+          type: "boolean"
+          default: false
+          example: false
     FlashcardCollection:
       type: "object"
       properties:
